# SoundClassifierTraining

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml
.github/workflows/: jenkins_pr.yml
.jenkins_flows/: main_pr
app/: app.py
docs/: design_doc.md  index.md
docs/api_reference/: model.md
profiling/: __init__.py  classifiertraining_profiling.py
soundsourceClassifiertraining/: __init__.py  constants.py  decorators.py  errors.py  model.py  warnings.py
soundsourceClassifiertraining/utils/: __init__.py  audio_airabsorption.py  audio_augment.py  audio_dataset.py  audio_processing.py  classifier.py  processing.py
soundsourceClassifiertraining/utils/weights/: model.pth
tests/: __init__.py  conftest.py  test_soundsourceClassifiertraining.py
